--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.x
+      
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+
+      - name: Print PYTHONPATH
+        run: echo $PYTHONPATH
 
       - name: Install dependencies
         run: |
