--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,12 @@ jobs:
 
       - name: Run pytest
         run: pytest
+        
+      - name: Log in to Docker Registry
+        uses: docker/login-action@v1
+        with:
+          username: aliarham018
+          password: ${{ secrets.DOCKERHUB_SECRET }}
 
       - name: Build Docker image
         run: docker build -t aliarham018/pacmann_mlprocess .
