--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 anyio==3.7.0
+click==8.1.3
 exceptiongroup==1.1.1
 fastapi==0.96.0
+h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
 packaging==23.1
@@ -11,3 +13,4 @@ sniffio==1.3.0
 starlette==0.27.0
 tomli==2.0.1
 typing_extensions==4.6.3
+uvicorn==0.22.0
